--- a/templates/error.html
+++ b/templates/error.html
@@ -1,11 +1,8 @@
-{% extends "layout-1.html" %}
-
+{% extends "error-layout.html" %}
 {% block title %}
     Error
 {% endblock %}
-
 {% block body %}
     <h1>Error</h1>
-
     {{ message }}
 {% endblock %}
