--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,8 @@
-{% extends "layout-1.html" %}
+{% extends "landing-layout.html" %}
 {% block title %}
     BookJar - Register
 {% endblock %}
-
 {% block body %}
-    <h1>Register</h1>
     <form action="/register" method="post">
         <input type="text" placeholder="Username" name="username">
         <input type="password" placeholder="Password" name="password" pattern=".{6,}">
