--- a/templates/book.html
+++ b/templates/book.html
@@ -60,10 +60,10 @@
             <!-- Not used in mobile -->
             <p id="already-reviewed">You already reviewed {{ book.title }}</p> 
             {% else %}
-            <form id="review-form" action="/review" method="post" onsubmit="hideForm()">
+            <form id="review-form" name="reviewForm" action="/review" method="post" onsubmit="return(validate(this))">
                 <div id="rating-top">
                     <h3>Your rating</h3>
-                    <i id="close" class="fas fa-times" onclick="hideForm()"></i>
+                    <i id="close" class="fas fa-times"></i>
                 </div>
                 <div id="radio">
                     <input checked type="radio" id="five" name="rating" value="5">
@@ -86,6 +86,15 @@
         </div>
     </div>
     <script>
+        const validate = (event) => {
+            if (document.reviewForm.review.value == "") {
+                document.reviewForm.review.focus()
+                return false
+            }
+            else {
+                hideForm()
+            }
+        }
         const showForm = () => {
             let reviewForm = document.getElementById("submit-review")
             reviewForm.style.display = "block"
@@ -96,3 +105,4 @@
         }
     </script>
 {% endblock %}
+
